--- a/AICW2/mychatbots/ticketfinder/templates/ticketfinder/find_ticket.html
+++ b/AICW2/mychatbots/ticketfinder/templates/ticketfinder/find_ticket.html
@@ -5,6 +5,7 @@
     <title>Train Ticket Finder</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'ticketfinder/ajax_requests.js' %}"></script>
+    <script src="{% static 'ticketfinder/page_events.js'}"></script>
 </head>
 <body>
 
