purify json now working on reload

--- a/AICW2/mychatbots/ticketfinder/templates/ticketfinder/chat_interface.html
+++ b/AICW2/mychatbots/ticketfinder/templates/ticketfinder/chat_interface.html
@@ -23,5 +23,6 @@
 </div>
 
 <script src="{% static 'ticketfinder/js/chatbot.js' %}"></script>
+<script src="{% static 'ticketfinder/js/page_events.js' %}"></script>
 </body>
 </html>
