added in past_inputs passed to data base

--- a/AICW2/mychatbots/ticketfinder/templates/ticketfinder/chat_interface.html
+++ b/AICW2/mychatbots/ticketfinder/templates/ticketfinder/chat_interface.html
@@ -16,7 +16,7 @@
     <div id="chat-box" class="mb-3 p-3 bg-light overflow-auto">
         
     </div>
-    <div id="input-group">
+    <div id="input-group" class="input-group">
         <input type="text" id="user-input" class="form-control me-2" placeholder="How can I help you today?">
         <button id="send" class="btn btn-primary">Send</button>
     </div>
