--- a/AICW2/mychatbots/ticketfinder/static/ticketfinder/chatbot.css
+++ b/AICW2/mychatbots/ticketfinder/static/ticketfinder/chatbot.css
@@ -35,7 +35,7 @@ body {
     flex-direction: column;
     padding: 1rem;
     margin: auto; 
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    background-color: rgba(255, 255, 255, 0.8); 
     box-shadow: 0 4px 6px rgba(0,0,0,.1); 
     overflow: hidden; 
 }
@@ -43,7 +43,7 @@ body {
 #chat-box {
     flex-grow: 1;
     overflow-y: auto;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     margin-bottom: 1rem;
     padding: 0.5rem;
     background-color: #f8f9fa; 
